# rent-bernard

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: api.yml  build-container.yml  frontend.yml  test.yml
api/: .env  .env.docker  App.toml  Cargo.toml  Dockerfile
api/migrations/: 20231008012950_users.sql  20231008031937_rooms.sql  20231008051147_room_images.sql  20231014184850_add-unique-constraint-to-user-email.sql  20231015002144_room_user_foreign_key.sql  20231020230027_create_withlist.sql  20231026195320_timestamp_to_timestamptz.sql  20231101000236_alter_address.sql  20231104182602_add_longitude_latitude_to_rooms.sql
api/migrations/2023-05-22-202938_create_rooms/: up.sql
api/migrations/2023-05-22-211022_create_room_images/: down.sql  up.sql
api/scripts/: start.sh
api/src/: main.rs  schema.rs
api/src/controller/: mod.rs  photos.rs  rooms.rs  users.rs  wishlists.rs
api/src/fairing/: cors.rs  db.rs
api/src/model/: mod.rs  room.rs
api/src/model/room/: factory.rs  mod.rs  model.rs
api/src/model/room_image/: factory.rs  model.rs
api/src/model/user/: factory.rs  mod.rs  model.rs
api/src/model/wishlist/: factory.rs  model.rs
api/src/utils/: auth.rs  mod.rs  redis.rs  s3.rs
api/src/view/: mod.rs  photo.rs  room.rs  user.rs
docker/s3/: Dockerfile  cors.xml  package.json  serverless.yml
frontend/: .eslintrc.js  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.ts  App.tsx  index.css  index.tsx  (+1 more)
(+95 files in other folders)
