[package]
name = "rent-bernard-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = "1.0.160"
chrono = "0.4.24"
aws-config = "0.56.1"
aws-sdk-s3 = "0.31.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.3", features = ["v4"] }
surrealdb = "1.0.0-beta.9"
